# xray-lite

./: .gitignore  CHANGELOG_io_uring.md  Cargo.toml  DEBUGGING_SUMMARY.md  DESIGN.md  GITHUB_UPLOAD.md  OPTIMIZATION_PROPOSAL.md  PROJECT_READY.md  README.md  REALITY_CLIENT_AUTH_ANALYSIS.md  REALITY_CONFIG_GUIDE.md  RELEASE_NOTES_v0.2.8.md  USAGE.md  build_release.sh  install.sh  keygen-linux-x86_64  publish_now.sh  release_binary.sh  release_build.sh  upload_to_github.sh  xray-linux-amd64.dgst
.github/: FUNDING.yml
.github/workflows/: release.yml
dist-temp/: keygen-linux-x86_64  vless-server-linux-aarch64
docs/: io_uring_completion_summary.md
examples/: reality_auth_demo.rs
monoio-io-wrapper/: Cargo.toml
monoio-rustls-reality/: Cargo.toml
monoio-rustls-reality/src/: client.rs  lib.rs
rustls-reality/rustls/src/: reality.rs
rustls-reality/rustls/src/server/: tls13.rs
src/: handler.rs  lib.rs  main.rs  server.rs  server_uring.rs  xdp.rs
src/config/: mod.rs  validator.rs
src/network/: connection.rs
src/protocol/: mod.rs  sniffer.rs
src/protocol/vless/: address.rs  request.rs
src/transport/reality/: auth.rs  cert_fetch.rs  cert_gen.rs  crypto.rs  handshake.rs  hello_parser.rs  mod.rs  server.rs  server_monoio.rs  server_rustls.rs  stream.rs  tls.rs  tls_handler.rs
src/transport/xhttp/: h2.rs  mod.rs  server.rs
src/utils/: crypto.rs  error.rs  mod.rs  net.rs  splice.rs  task.rs  timer.rs
tests/: reality_integration.rs
xray-lite-ebpf/: Cargo.toml
xray-lite-ebpf/src/: main.rs
